--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-\<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="apple-touch-icon" type="image/png" href="https://static.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
 <meta name="apple-mobile-web-app-title" content="CodePen">
+<link rel="shortcut icon" type="image/x-icon" href="https://static.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
+<link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 <title>CodePen - AACoding04-2</title>
 <style>
+h1{
+  background-color:lavender;
+}
+
+
+ol{ 
+  background-image:url("https://ewscripps.brightspotcdn.com/dims4/default/eb60ab9/2147483647/strip/true/crop/640x360+0+60/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.thedenverchannel.com%2Fphoto%2F2016%2F03%2F23%2FSnow%20Storm_March_1458765797628_34683834_ver1.0_640_480.jpg")}
+
+
 .correct{
   background:green;
 }
@@ -18,15 +31,29 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <audio id="sad" controls>
-<source src="snd/sad.mp3" type="audio/mpeg">
+<source src="https://math.seattleacademy.org/garyanderson/snd/sad.mp3" type="audio/mpeg">
 </audio>
 <div>Timer: <span id="theTimer">0</span> Score: <span id="score">0</span></div>
-<h1>Gary's Awesome Math Problems</h1>
+<h1>Caitrian's Awesome Math Problems</h1>
 <ol>
 <li> \( 2^3 \) <input data-correct="8" /> </li>
 <li> \( \sqrt[3]{8} \) <input data-correct="2" /></li>
 <li> \( 8^\frac{1}{3} \) <input data-correct="2" /></li>
 <li> \( 27^\frac{-2}{3} \) <input data-correct="1/9" /></li>
+<li>\(\sqrt[3]{8} + \sqrt[3]{27}\)
+<input data-correct="5">
+</li>
+<li>\(2^3\)
+<input data-correct="8">
+</li>
+<li>\(\sqrt{8} * \sqrt{8}\)
+<input data-correct="8" < li>
+<li>\(\sqrt{36}\)
+<input data-correct="6" < li>
+<li>\(\sqrt[3]{1000}\)
+<input data correct="10" < li>
+<li>\(\sqrt[3]{216}\)
+<input data-correct="6" < li>
 <ol>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 <script id="rendered-js">
