--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ ol{
 
 
 .correct{
-  background:green;
+  background:lightgreen;
 }
 
 .incorrect{
-  background:red;
+  background:pink;
 }
 </style>
 </head>
