--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ ol{
 <li>\(\sqrt{36}\)
 <input data-correct="6" < li>
 <li>\(\sqrt[3]{1000}\)
-<input data correct="10" < li>
+<input data-correct="10" < li>
 <li>\(\sqrt[3]{216}\)
 <input data-correct="6" < li>
 <ol>
