--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ ol{
 <li>\(\sqrt[3]{8} + \sqrt[3]{27}\)
 <input data-correct="5">
 </li>
-<li>\(2^3\)
-<input data-correct="8">
+<li>\(27^\frac{1}{3})
+<input data-correct="3">
 </li>
 <li>\(\sqrt{8} * \sqrt{8}\)
 <input data-correct="8" < li>
