--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,12 +11,12 @@
 <title>CodePen - AACoding04-2</title>
 <style>
 h1{
-  background-color:lavender;
+  background-color:#FFCAB1;
 }
 
 
-ol{ 
-  background-image:url("https://ewscripps.brightspotcdn.com/dims4/default/eb60ab9/2147483647/strip/true/crop/640x360+0+60/resize/1280x720!/quality/90/?url=https%3A%2F%2Fmediaassets.thedenverchannel.com%2Fphoto%2F2016%2F03%2F23%2FSnow%20Storm_March_1458765797628_34683834_ver1.0_640_480.jpg")}
+body{ 
+  background-image:url("https://r-cf.bstatic.com/data/xphoto/1182x591/568/56833453.jpg?size=S")}
 
 
 .correct{
@@ -33,6 +34,9 @@ ol{
 <audio id="sad" controls>
 <source src="https://math.seattleacademy.org/garyanderson/snd/sad.mp3" type="audio/mpeg">
 </audio>
+<audio id="happy" controls>
+<source src="https://ameliaquarnstrom.github.io/AACoding04-2/snd/ding.mp3.mp3" type="audio/mpeg">
+</audio>
 <div>Timer: <span id="theTimer">0</span> Score: <span id="score">0</span></div>
 <h1>Caitrian's Awesome Math Problems</h1>
 <ol>
@@ -44,7 +48,7 @@ ol{
 <input data-correct="5">
 </li>
 <li>\(27^\frac{1}{3}\)
-<input data-correct="3">
+<input data-correct="8">
 </li>
 <li>\(\sqrt{8} * \sqrt{8}\)
 <input data-correct="8" < li>
@@ -77,6 +81,9 @@ function onChange(evt) {
     $(this)
       .removeClass("incorrect")
       .addClass("correct");
+    if(Math.random() > 0) {
+      happy.play();
+    }
   } else {
     $(this)
       .removeClass("correct")
